Nettoyage du code